# hackday-tour-embeddings

./: .pre-commit-config.yaml  README.md  pyproject.toml
hackday_tour_embeddings/baseline/: w2v.py
hackday_tour_embeddings/data_preparation/: data_loading.py  token_builder.py  torch_data_loaders.py
hackday_tour_embeddings/vae/: train_vae.py
